--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -46,7 +46,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <ul class="nav navbar-nav ">
-        {% if is_granted('ROLE_ENREGISTREMENT') %}
+        {% if is_granted('ROLE_ENREGISTREMENT')  or is_granted('ROLE_AIGUILLEUR') %}
             <li class="nav-item px-3">
               <a class="nav-link {% block menu_enregistrement_actif %}{% endblock %}" href="{{ path('vehicule_index') }}">AIGUILLAGE</a>
             </li>
