--- a/app/Resources/views/visite/controle.html.twig
+++ b/app/Resources/views/visite/controle.html.twig
@@ -51,7 +51,16 @@
                         <td>
                             <select id='{{ controle.code }}' name='{{ controle.code }}' required >
                                 <option value="">Choisir</option>
-                                {% for code in controle.codeMahaResultats %}<option value='{{ code.valeur }}'>{{ code.libelle }}</option>{% endfor %}
+                                {% for code in controle.codeMahaResultats %}
+                                    {% if code.reussite == true %}
+                                        <option value='{{ code.valeur }}'>{{ code.libelle }}</option>
+                                    {% endif %}
+                                {% endfor %}
+                                {% for code in controle.codeMahaResultats %}
+                                    {% if code.reussite == false %}
+                                        <option value='{{ code.valeur }}'>{{ code.libelle }}</option>
+                                    {% endif %}
+                                {% endfor %}
                             </select>
                         </td>
                     </tr>
