--- a/app/Resources/views/statistique/caisse/index.html.twig
+++ b/app/Resources/views/statistique/caisse/index.html.twig
@@ -8,7 +8,7 @@
 {% block ariane -%}
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="{{ path('homepage') }}">Accueil</a></li>
-        <li class="breadcrumb-item">Etast journaliers des caisses</li>
+        <li class="breadcrumb-item">Etat journalier des caisses</li>
     </ol>
 {% endblock %}
 {% block menu_gestion_actif %}active{% endblock %}
