quittance n'affiche plus frais de timbre si montant 0 Contre visite n'icrémente pas le compteur revisite

--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -42,7 +42,7 @@
                     <i class="nav-icon icon-list"></i> Statistiques avancées</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link {% block menu_detail_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_detail_index') }}">
+                <a class="nav-link {% block menu_cont_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_detail_index') }}">
                     <i class="nav-icon icon-list"></i> Rapport contrôleurs</a>
             </li>
         </ul>
