--- a/app/Resources/views/centre/menu.html.twig
+++ b/app/Resources/views/centre/menu.html.twig
@@ -42,7 +42,15 @@
                     <i class="nav-icon icon-list"></i> Statistiques avancées</a>
             </li>
             <li class="nav-item ">
-                <a class="nav-link {% block menu_cont_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_detail_index') }}">
+                <a class="nav-link {% block menu_echec_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_echec_index') }}">
+                    <i class="nav-icon icon-list"></i> Visites échouées</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link {% block menu_rapportcentre_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_centre_index') }}">
+                    <i class="nav-icon icon-list"></i> Rapport centre</a>
+            </li>
+            <li class="nav-item ">
+                <a class="nav-link {% block menu_rapportcontroleur_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_statistique_controleur_index') }}">
                     <i class="nav-icon icon-list"></i> Rapport contrôleurs</a>
             </li>
         </ul>
