--- a/app/Resources/views/centre/ouverture.html.twig
+++ b/app/Resources/views/centre/ouverture.html.twig
@@ -48,6 +48,7 @@
                 <tr>
                     <th>CAISSE</th>
                     <th>SOLDE INITIAL</th>
+                    <th>AIGUILLAGE SUR CAISSE</th>
                     <th>CAISSIER</th>
                     <th>PISTE</th>
                     <th>CONTROLLEUR</th>
@@ -56,8 +57,9 @@
             <tbody>
             {% for chaine in chaines %}
                 <tr>
-                    <td><a title="Saisir le solde d'ouverture" href="{{ path('admin_parametres_caisse_solde', { 'id': chaine.caisse.id }) }}">{{ chaine.caisse.numero }}</a> {% if chaine.caisse.ouvert %}(Ouverte){% else %}(Fermée){% endif %}</td>
+                    <td><a title="Initialiser" href="{{ path('admin_parametres_caisse_solde', { 'id': chaine.caisse.id }) }}">{{ chaine.caisse.numero }}</a> {% if chaine.caisse.ouvert %}(Ouverte){% else %}(Fermée){% endif %}</td>
                     <td>{{ chaine.caisse.soldeInitial|number_format(0, ',', ' ') }}</td>
+                    <td>{% if chaine.caisse.aiguillage %}OUI{% else %}NON{% endif %}</td>
                     <td>{% if chaine.caisse.getAffectationActive %}{{ chaine.caisse.getAffectationActive.agent.username }}{% else %}Pas d'agent affecté{%endif%}</td>
                     <td>{{ chaine.piste.numero }}</td>
                     <td>{% if chaine.piste.affectationsActives is not empty %}{% for affectation in chaine.piste.affectationsActives %}{{ affectation.agent.username }}<br/>{%endfor%}{% else %}Pas d'agent affecté{%endif%}</td>
