Types  	Descriptions Contre visite visuelle   	La création de contre visite visuelle peut faire passer le véhicule en succès mm si le résultat maha est négative Fichier corrompu 	j'ai constaté que si le nom ou prénom est trop long sa pose le probleme de fichier corrompu Resultat contrôle maha 	le système envoie des fois deux résultats maha(fichier joint) quand un contrôle est effectué et que les resultats ne remontent pas , en generant le fichier CG et en reprenant la visite on constate certains des resultats en double (voir pièce jointe ) Pesé(poids) 	La vérifier du poids du véhicule sur maha(a introduire) NB: Avec un seul véhicule on peut faire passer plusieurs immatriculation sur MAHA Aiguillage gratuit 	Créer un nouveau bouton aiguillage qui ne passe pas par la caisse directement visible sur maha uniquement pour le superviseur du centre Contre visite normale et visuelle   	les contres visites crée des quittances avec le nom du controlleur et le prix a zero si possible de les cacher Enregistrement 	sur le formulaire d enregistrement de vehicule au lieu d afficher nom proprietaire suivi du numero de phone  le client veut que sa soit nom proprietaire suivi de l adresse du proprietaire Pénalité  	Afficher le motant de la pénalité sur la quittance

--- a/app/Resources/views/quittance/show.principal.html.twig
+++ b/app/Resources/views/quittance/show.principal.html.twig
@@ -76,7 +76,7 @@
                 <td>{% if quittance.caissier is not null %}{{ quittance.caissier.nomComplet }} {% else %}   {{ quittance.creePar }} {% endif %}</td>
             </tr>
             <tr>
-                <td style="background: #000;color:#fff;padding:10px"><span >PENALITE : {% if quittance.penalite > 0 %}OUI{% else %}NON{%endif%}</span></td>
+                <td style="background: #000;color:#fff;padding:10px"><span >PENALITE : {{quittance.penalite|round(0, 'ceil')|number_format(0, ',', ' ')}}</td>
                 <td colspan="6" align="center">Valable pour {{ quittance.visite.vehicule.typeVehicule.delai }} jours</td>
             </tr>
      </tbody>
@@ -131,7 +131,7 @@
                     <td>{% if quittance.caissier is not null %}{{ quittance.caissier.nomComplet }} {% else %}   {{ quittance.creePar }} {% endif %}</td>
                 </tr>
                 <tr>
-                    <td style="background: #000;color:#fff;padding:10px"><span >PENALITE : {% if quittance.penalite > 0 %}OUI{% else %}NON{%endif%}</span></td>
+                    <td style="background: #000;color:#fff;padding:10px"><span >PENALITE : {{quittance.penalite|round(0, 'ceil')|number_format(0, ',', ' ')}}</span></td>
                     <td colspan="6" align="center">Valable pour {{ quittance.visite.vehicule.typeVehicule.delai }} jours</td>
                 </tr>
          </tbody>
