Format immatriculation par defaut

--- a/app/Resources/views/formatimmatriculation/index.html.twig
+++ b/app/Resources/views/formatimmatriculation/index.html.twig
@@ -30,6 +30,7 @@
                 <th>Presentation</th>
                 <th>Regex</th>
                 <th>Actif</th>
+                <th>Par defaut</th>
                 <th>Actions</th>
             </tr>
         </thead>
