--- a/app/Resources/views/formatimmatriculation/show.html.twig
+++ b/app/Resources/views/formatimmatriculation/show.html.twig
@@ -46,6 +46,10 @@
                 <td>{% if formatImmatriculation.actif %}OUI{% else %}NON{% endif %}</td>
             </tr>
             <tr>
+                <th>Par défaut</th>
+                <td>{% if formatImmatriculation.vedette %}OUI{% else %}NON{% endif %}</td>
+            </tr>
+            <tr>
                 <th>Créé par</th>
                 <td>{{ formatImmatriculation.creePar }}</td>
             </tr>
