--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -69,7 +69,7 @@
           <a class="nav-link {% block menu_gestion_actif %}{% endblock %}" href="{{ path('admin_gestion_centre_index') }}">GESTION</a>
         </li>
         {% endif %}
-        {% if is_granted('ROLE_CAISSIER_PRINCIPAL') %}
+        {% if is_granted('ROLE_CHEF_CENTRE') %}
         <li class="nav-item px-3">
           <a class="nav-link {% block menu_parametres_actif %}{% endblock %}" href="{{ path('parametre_index') }}">PARAMETRES</a>
         </li>
