--- a/app/Resources/views/quittance/confirmer.html.twig
+++ b/app/Resources/views/quittance/confirmer.html.twig
@@ -47,12 +47,16 @@
                         <td>{{ quittance.penalite|number_format(0, ',', ' ') }}</td>
                     </tr>
                     <tr>
+                        <th>Redevance ANASER</th>
+                        <td>{{ anaser|number_format(0, ',', ' ') }}</td>
+                    </tr>
+                    <tr>
                         <th>Droit de visite</th>
                         <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre)|round(0, 'ceil')  }}</td>
                     </tr>
                     <tr>
                         <th>Total TTC</th>
-                        <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre+quittance.penalite)|round(0, 'ceil')  }}</td>
+                        <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre+quittance.penalite+anaser)|round(0, 'ceil')  }}</td>
                     </tr>
                 </table>
             </div>
