--- a/app/Resources/views/quittance/imprim.html.twig
+++ b/app/Resources/views/quittance/imprim.html.twig
@@ -10,13 +10,13 @@
 <table border="1" style="width:1150px;" cellpadding="0" cellspacing="0">
      <tbody>
          <tr>
-             <td colspan="7" style="border:none; padding:5px">
+             <td colspan="8" style="border:none; padding:5px">
                  <span style="font-weight: bold">CVT : {{libelle}}</span>
                 <span style="margin-left:500px; font-weight:bold;">Type/Marque : {%if quittance.visite.vehicule.modele%}{{ quittance.visite.vehicule.modele.libelle}}/{{quittance.visite.vehicule.modele.marque.libelle }}{% endif %}</span>
              </td>
          </tr>
             <tr>
-                <td colspan="7" style="border:none; padding:5px">
+                <td colspan="8" style="border:none; padding:5px">
                     <span style="font-weight: bold">Date : {% if quittance.dateCreation %}{{ quittance.dateCreation|date('Y-m-d') }}{% endif %}</span>
                     <span style="margin-left:500px; font-weight:bold;">Immatriculation : {{ quittance.visite.vehicule.immatriculation }}</span>
                 </td>
@@ -27,6 +27,7 @@
                 <th>Prix total</th>
                 <th>TVA 18%</th>
                 <th>Droit de timbre</th>
+                <th>Redevance ANASER</th>
                 <th>Total TTC</th>
                 <th>Caissier</th>
             </tr>
@@ -36,6 +37,7 @@
                 <td>{{ quittance.montantVisite|number_format(0, ',', ' ') }}</td>
                 <td>{{ quittance.tva|number_format(0, ',', ' ') }}</td>
                 <td>{{ quittance.timbre|number_format(0, ',', ' ')}}</td>
+                <td>{{ anaser|number_format(0, ',', ' ')}}</td>
                 <td>{{ (quittance.montantVisite+quittance.tva+quittance.timbre)|round(0, 'ceil')  }}</td>
                 <td>{{ quittance.creePar }}</td>
             </tr>
