Rdevance anaser par quittance

--- a/app/Resources/views/caisse/fermeture.confirmer.html.twig
+++ b/app/Resources/views/caisse/fermeture.confirmer.html.twig
@@ -10,6 +10,7 @@
             <tr>
                 <th>REVISITES</th><td>NB : {{ caisse.nbrevisite }} pour un montant de : {{ caisse.montantrevisite|number_format(0, ',', ' ') }} FCFA</td>
             </tr>
+            <tr><th>ANASER</th><td>{{ caisse.anaser|number_format(0, ',', ' ') }} FCFA</td></tr>
         </table>
     </div>
 
