--- a/app/Resources/views/statistique/caisse/etat.html.twig
+++ b/app/Resources/views/statistique/caisse/etat.html.twig
@@ -47,6 +47,7 @@
                     <th>Nombre de revisites</th>
                     <th>Montant des visites</th>
                     <th>Montant des revisites</th>
+                    <th>Redevance ANASER</th>
                     <th>Chiffre d'affaire</th>
                 </tr>
             </thead>
@@ -59,6 +60,7 @@
                         <td>{{ resultat[3]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[4]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[5]|number_format(0, ',', ' ') }}</td>
+                        <td>{{ resultat[6]|number_format(0, ',', ' ') }}</td>
                     </tr>
                 {% endfor %}
             
@@ -90,6 +92,7 @@
                     <th>Nombre de revisites</th>
                     <th>Montant des visites</th>
                     <th>Montant des revisites</th>
+                    <th>Redevance ANASER</th>
                     <th>Chiffre d'affaire</th>
                 </tr>
             </thead>
@@ -102,6 +105,7 @@
                         <td>{{ resultat[3]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[4]|number_format(0, ',', ' ') }}</td>
                         <td>{{ resultat[5]|number_format(0, ',', ' ') }}</td>
+                        <td>{{ resultat[6]|number_format(0, ',', ' ') }}</td>
                     </tr>
                 {% endfor %}
             
